# Text-Editor

./: .gitignore  CMakeLists.txt  build.bat
source/: base.h  editor.c  editor.cpp  editor.h  editor_view.c  editor_view.cpp  editor_view.h  input.c  input.h  platform.c  platform.cpp  win_main.c  win_main.cpp  win_platform.cpp
